--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+  <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()" /> -->
 
   <meta name="theme-color" content="#000000" />
-  <meta
-    name="description"
-    content="Web site created using create-react-app"
-  />
+  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!-- Use the correct file names for CSS and JavaScript assets -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.073c9b0a.css" />
-  <script src="%PUBLIC_URL%/static/js/main.3a155d1a.js"></script>
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.073c9b0a.css" />
+  <script src="%PUBLIC_URL%/static/js/main.3a155d1a.js"></script> -->
 
   <!--
     manifest.json provides metadata used when your web app is installed on a
@@ -32,6 +30,7 @@
   -->
   <title>React App</title>
 </head>
+
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
@@ -46,5 +45,5 @@
     To create a production bundle, use `npm run build` or `yarn build`.
   -->
 </body>
-</html>
 
+</html>
