--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
   <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()" /> -->
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link
+  href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+  rel="stylesheet"
+/>
+
   
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
