--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()" /> -->
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Mark Robertson's Portfolio Site" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
   <link
   href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
@@ -25,7 +25,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>React App</title>
+  <title>Mark Robertson's Portfolio</title>
 </head>
 
 <body>
